# Solutions

./: .gitignore  README.md  readme.md
AOC-2022/: Day1.apl  Day1.idr  Day10.hs  Day11.hs  Day12.hs  Day13.bqn  Day14.bqn  Day15.bqn  Day16.rs  Day2.apl  Day2.hs  Day3.apl  Day4.apl  Day4.hs  Day5.apl  Day5.hs  Day5.rs  Day6.apl  Day6.hs  Day6.rs  Day7.hs  Day8.apl  Day8.hs  Day9.apl  Day9.bqn  Day9.hs
AOC-2023/day-1/: flake.nix  mix.exs
AOC-2023/day-1/lib/: sandbox.ex
AOC-2023/day-10/: flake.nix  pyproject.toml
AOC-2023/day-10/sandbox/: __main__.py
AOC-2023/day-11/: flake.nix  sandbox.cabal
AOC-2023/day-11/src/: Main.hs
AOC-2023/day-12/src/: Main.hs
AOC-2023/day-13/: justfile
AOC-2023/day-13/src/: Main.hs
AOC-2023/day-14/: sandbox.cabal
AOC-2023/day-14/src/: Main.hs
AOC-2023/day-15/src/: Main.hs
AOC-2023/day-2/: flake.nix
AOC-2023/day-2/src/: main.rs
AOC-2023/day-3/: .gitignore  flake.nix  settings.gradle.kts
AOC-2023/day-3/app/: build.gradle.kts
AOC-2023/day-3/app/src/main/kotlin/sandbox/: App.kt
AOC-2023/day-3/app/src/test/kotlin/sandbox/: AppTest.kt
AOC-2023/day-4/: flake.nix  main.ua
AOC-2023/day-5/: .gitignore  Program.cs  Utils.cs  flake.nix
AOC-2023/day-6/: flake.nix  sandbox.cabal
AOC-2023/day-6/src/: Main.hs
AOC-2023/day-7/: main.bash
AOC-2023/day-8/: .eslintrc.json  app.ts  flake.nix  package-lock.json  package.json  tsconfig.json
AOC-2023/day-9/src/: Main.hs
AOC-2024/: README.md  day-1.hs  day-10.hs  day-11.hs  day-2.hs  day-3.hs  day-4.hs  day-5.hs  day-6.hs  day-7.hs  day-8.hs  day-9.hs
AOC-2024/Utils/day-1/: Utils.hs  UtilsTuple.hs
AOC-2024/Utils/day-11/: Utils.hs
AOC-2024/Utils/day-3/: Utils.hs
AOC-2024/Utils/day-5/: Utils.hs
AOC-2024/Utils/day-6/: Utils.hs
AOC-2024/Utils/day-7/: Utils.hs  UtilsTuple.hs
Codewars/: Befunge Interpreter.hs  One function, many arguments: Haskell style.hs  Peano and Church.hs  The most imperative functional language?.hs  singletons.hs
Codewars/SimpleSQLEngine/: README.md  SimpleSQLEngine.cabal  cabal.project.freeze  flake.nix  justfile
Codewars/SimpleSQLEngine/app/: Main.hs
Codewars/SimpleSQLEngine/src/SimpleSQLEngine/: Kata.hs
Codewars/SimpleSQLEngine/test/: SQLTest.hs  SimpleSQLEngineParserSpec.hs  SimpleSQLEngineSpec.hs
Eulertour/: readme.md
apl-comp-2023/: phase1.apl
day-16/: Main.old.hs  sandbox.cabal
day-16/src/: Main.hs
discrete-math/: logical-equivalences.idr
neetcode-solutions/: README.md  dynamicArray.cpp  singlyLinkedList.py
neetcode-solutions/arrays-and-hashing/: contains-duplicate.rs  group-anagram.rs  longest-consecutive-subsequence.rs  product-of-array-except-self.rs  top-k-most-frequent.rs  two-sum.cpp  valid-anagram.rs  valid-sudoku.rs
neetcode-solutions/stack/: daily_tempuratures.rs  eval-rpn.rs  generate_parenthesis.rs  minstack.rs  valid-parentheses.rs
neetcode-solutions/trees/: invert-binary-tree.rs  kth-smallest-element-in-a-bst.rs
neetcode-solutions/two-pointers/: container-with-most-water.rs  trapping-rainwater.rs
