cabal-version:      2.4
name:               Sandbox
version:            0.1.0.0
license:            MIT
copyright:          2022 Perigord-Kleisli
extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall 
    -Wincomplete-record-updates 
    -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies 
    -Wunused-foralls 
    -Wunused-foralls
    -fprint-explicit-foralls 
    -fprint-explicit-kinds -O2

  build-depends:
    , base          >=4.13.0.0 && <4.18.0.0.0
    , containers
    , Chart
    , Chart-diagrams
    , data-default
    , directory
    , filepath
    , ghc-prim
    , gloss
    , gloss-juicy
    , lens
    , generic-lens
    , parsec
    , split
    , megaparsec
    , parallel
    , generic-optics
    , JuicyPixels
    , mtl
    , optics-core
    , profunctors
    , shower
    , time
    , with-utf8

  hs-source-dirs:     src
  default-language:   GHC2021

executable sandbox
  import:        shared
  main-is:       Main.hs
