[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["Trouble-Truffle <perigordtruffle7318@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
more-itertools = "^10.1.0"
colorist = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
