cabal-version:      2.4
name:               SimpleSQLEngine
version:            0.1.0.0
license:            MIT
copyright:          2022 Perigord-Kleisli
homepage:           https://github.com/Perigord-Kleisli/Solutions
extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  default-language: Haskell2010
  build-depends:
    , attoparsec
    , base                 >=4.7 && <5
    , haskell-src-exts
    , hspec
    , hspec-attoparsec
    , hspec-contrib
    , hspec-megaparsec
    , HUnit-approx
    , lens
    , megaparsec
    , mtl
    , parsec
    , persistent
    , persistent-sqlite
    , persistent-template
    , PyF
    , QuickCheck
    , random
    , regex-pcre
    , regex-posix
    , regex-tdfa
    , split
    , text
    , transformers
    , vector

executable SSEngine
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: app

library
  import:          shared
  hs-source-dirs:  src
  exposed-modules: SimpleSQLEngine.Kata

test-suite SimpleSQLEngineTest
  import:         shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        SQLTest.hs
  build-depends:  SimpleSQLEngine
  other-modules:
    SimpleSQLEngineParserSpec
    SimpleSQLEngineSpec
